--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@headlessui/react": "^1.7.17",
     "@headlessui/tailwindcss": "^0.2.0",
     "@heroicons/react": "^2.0.18",
+    "firebase": "^10.4.0",
     "install": "^0.13.0",
     "npm": "^10.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.15.0"
+    "react-hook-form": "^7.46.1",
+    "react-router-dom": "^6.15.0",
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
@@ -29,9 +32,13 @@
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "firebase-tools": "^12.5.4",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.2",
     "vite": "^4.3.9"
-  }
+  },
+  "workspaces": [
+    "packages/model"
+  ]
 }
